--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 #header{
     height: 100vh;
     width: 100%;
-    background-image: url(../../ME.JPG);
+    background-image: url(/assets/images/IMG_2887.jpg);
     background-size: cover;
     background-position: center;
 }
