--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,15 @@ nav ul li a:hover::after {
   overflow: hidden;
 }
 
+.portfolio-image {
+  width: 100%;
+  height: 350px; /* Set a fixed height */
+  object-fit: cover; /* Ensure the image covers the set dimensions */
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
+}
+
 .work img {
   width: 100%;
   border-radius: 10px;
