--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,20 @@ nav ul li a:hover::after {
   background: #ff004f;
 }
 
+.services-list button {
+  background: #ababab;
+  border: 1px solid #ff004f;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 30px;
+  transition: 0.5s;
+  margin: 30px 0;
+}
+
+.services-list button:hover {
+  background: #fff;
+}
+
 /* for the Work section */
 #portfolio {
   padding: 50px 0;
