--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,8 @@ nav ul li a:hover::after {
   border-radius: 30px;
   transition: 0.5s;
   margin: 30px 0;
+  text-decoration: none;
+  font-size: 14px;
 }
 
 .services-list button:hover {
